cluster/angular/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular
  namespace: angular
  annotations: 
    cert-manager.io/cluster-issuer: staging-cluster-issuer 
spec:
  ingressClassName: nginx
  rules:
  - host: app.mhasnain.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: angular
            port:
              number: 80
